tests/expectations/compiler/integers/u64/no_space_between_literal.out
Error [EPAR0370005]: expected ';' -- found 'u64'
    --> compiler-test:4:15
     |
   4 |     let i = 1 u64;
     |               ^^^
